# depthwatch

./: README.md  pyproject.toml
depthwatch/: advisories.py  baseline.py  cache.py  cli.py  export.py  notify.py  notify_config.py  plugins.py  report.py  resolver.py  scanner.py  snapshot.py  watch.py
tests/: test_advisories.py  test_baseline.py  test_cache.py  test_cli.py  test_export.py  test_notify.py  test_report.py  test_resolver.py  test_scanner.py  test_snapshot.py  test_watch.py
